services/worky/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s-worky
  namespace: stage
spec:
  type: NodePort
  ports:
  - name: main
    port: 80
    protocol: TCP
    targetPort: 9005
    nodePort: 30012
  selector:
    app: s-worky
