services/worky/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s-worky
  namespace: stage
spec:
  rules:
  - host: worky.showdown
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: s-worky
            port:
              name: main
